--- a/index.html
+++ b/index.html
@@ -5,18 +5,33 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <link rel="shortcut icon" href="./imgs/fav-icon2.png" />
+    <link rel="shortcut icon" href="./imgs/logo_master/logo_icon.png" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="./css/estilo.css">
 
-    <title>Suero Terraplenagem</title>
+    <title>Master Radiocomunicação</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top bg-dark">
+
+    <div class="contato_top">
+      <div class="container">
+          <div class="row justify-content-sm-center text-center">
+              <div class="contato_itens col-12">
+                    <div>Tem alguma dúvida? </div> 
+                    <div><i class="fa fa-phone"></i> 13 3854-1654 </div>
+                    <div><i class="fa fa-whatsapp text-success"></i> 13 997191911 </div>
+                    <div><i class="fa fa-envelope"></i> anibal@masterradios.com.br</div>
+              </div>
+          </div>
+      </div>
+    </div>
+
+
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top bg-light">
         <div class="container">
-        <a class="navbar-brand" href="#"><img src="./imgs/logo_suero.png" style="width: 80px; margin: 0; padding: 0;"/></a>
+        <a class="navbar-brand" href="#"><img src="./imgs/logo_master/master_logo_preto.png" style="width: 80px; margin: 0; padding: 0;"/></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,17 +39,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">PÁGINA INICIAL <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sobre</a>
+              <a class="nav-link" href="#">A EMPRESA</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contato</a>
+              <a class="nav-link" href="#">PRODUTOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">SOLUCÕES</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Portfolio
+                LOCAÇÃO
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Empreendimentos</a>
@@ -47,7 +65,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownSocial" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Nossas Redes
+                  NOSSAS REDES
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownSocial">
                   <a class="dropdown-item" href="https://www.facebook.com/SueroTerraplenagem">Facebook</a>
@@ -70,21 +88,21 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./imgs/carrossel1-crop.jpg" class="d-block w-100" alt="...">
+            <img src="./imgs/imagens_motorola/img1_crop.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block msg-car">
-              <h2>27 anos trabalhando no setor.</h2>
+              <h2>A 20 anos no mercado.</h2>
               <h5>Trabalhando com comprometimento e promovendo satisfação aos clientes.</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./imgs/carrossel2-crop.jpg" class="d-block w-100" alt="...">
+            <img src="./imgs/imagens_motorola/img2_crop.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block msg-car">
-              <h2>Qualidade em serviços de Terraplegem</h2>
-              <h5>Equipamentos novos e excelentes profissionais.</h5>
+              <h2>Qualidade em serviços e Equipamentos de primeira linha</h2>
+              <h5>Equipamentos novos e semi-novos.</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./imgs/carousel4-crop.jpg" class="d-block w-100" alt="...">
+            <img src="./imgs/imagens_motorola/img3_crop.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block msg-car">
               <h2>Loteamento Planejado</h2>
               <h5>Amplo espaço para segurança e conforto de sua familia.</h5>
