--- a/index.html
+++ b/index.html
@@ -42,16 +42,13 @@
               <a class="nav-link" href="#">PÁGINA INICIAL <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">A EMPRESA</a>
+              <a class="nav-link" href="empresa.html">A EMPRESA</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">PRODUTOS</a>
+              <a class="nav-link" href="produtos.html">PRODUTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">SOLUCÕES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">LOCAÇÂO</a>
+              <a class="nav-link" href="servicos.html">SERVIÇOS</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
