--- a/empresa.html
+++ b/empresa.html
@@ -68,7 +68,7 @@
         </div>
       </nav>
 
-      <div class="py-5">
+      <div class="py-5 titulo">
       <h1 class="text-center">A Empresa</h1>
       </div>
       
