--- a/servicos.html
+++ b/servicos.html
@@ -68,7 +68,7 @@
         </div>
       </nav>
 
-      <div class="py-5">
+      <div class="py-5 titulo">
       <h1 class="text-center">Nossos Serviços</h1>
       </div>
       
