--- a/produtos.html
+++ b/produtos.html
@@ -75,36 +75,36 @@
       <div class="container">
         <div class="produtos">
           <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8550ex.jpg" alt="">
-            <h4>DGP8050EX</h4>
+            <img src="imgs/imagens_motorola/ep450.png" alt="">
+            <h4>Motorola EP450</h4>
+          </div>
+          <div class="produto_item">
+            <img src="imgs/imagens_motorola/dep450.jpg" alt="">
+            <h4>Motorola DEP450</h4>
+          </div>
+          <div class="produto_item">
+            <img src="imgs/imagens_motorola/pro5150.png" alt="">
+            <h4>Motorola PRO5150</h4>
+          </div>
+          <div class="produto_item">
+            <img src="imgs/imagens_motorola/dgp5050.jpg" alt="">
+            <h4>Motorola DGP5050</h4>
+          </div>
+          <div class="produto_item">
+            <img src="imgs/imagens_motorola/dgp8050e.jpg" alt="">
+            <h4>Motorola DGP8050E</h4>
+          </div>
+          <div class="produto_item">
+            <img src="imgs/imagens_motorola/dgp8550e.jpg" alt="">
+            <h4>Motorola DGP8550E</h4>
+          </div>
+          <div class="produto_item">
+            <img src="imgs/imagens_motorola/dgp8050ex.jpg" alt="">
+            <h4>Motorola DGP8050EX</h4>
           </div>
           <div class="produto_item">
             <img src="imgs/imagens_motorola/dgp8550ex.jpg" alt="">
-            <h4>DGP8050EX</h4>
-          </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8550ex.jpg" alt="">
-            <h4>DGP8050EX</h4>
-          </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8550ex.jpg" alt="">
-            <h4>DGP8050EX</h4>
-          </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8550ex.jpg" alt="">
-            <h4>DGP8050EX</h4>
-          </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8550ex.jpg" alt="">
-            <h4>DGP8050EX</h4>
-          </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8550ex.jpg" alt="">
-            <h4>DGP8050EX</h4>
-          </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8550ex.jpg" alt="">
-            <h4>DGP8050EX</h4>
+            <h4>Motorola DGP8550EX</h4>
           </div>
           <div class="produto_item">
             <img src="imgs/imagens_motorola/dgp8550ex.jpg" alt="">
