--- a/empresa.html
+++ b/empresa.html
@@ -74,9 +74,12 @@
       
       <div class="container">
         <div class="row justify-content-center mb-4">
-            <div class="col-8">
+            <div class="col-6 mt-4">
                 <p class="text-justify">
-                    Com 20 anos no mercado, a Master Radiocomunicação vem a vossa presença apresentar-se como empresa altamente especializada, oferecendo melhor relação de custo entre todos os equipamentos das renomadas marcas Icom, Motorola e Kenwood, destacando-se pelo atendimento, rapidez, entrega imediata, qualidade em serviços e desempenho em campo, garantimos inquestionável satisfação, nos mais diversos ramos de atividade, sejam indústria, comércio, segurança, construtoras, empresas de prestação de serviços, condomínios, agricultura e outros.
+                    Com 20 anos no mercado, a Master Radiocomunicação vem a vossa presença apresentar-se como empresa altamente especializada, oferecendo melhor relação de custo entre todos os equipamentos das renomadas marcas Icom, Motorola e Kenwood.
+                </p>
+                <p>
+                    Destacando-se pelo atendimento, rapidez, entrega imediata, qualidade em serviços e desempenho em campo, garantimos inquestionável satisfação, nos mais diversos ramos de atividade, sejam indústria, comércio, segurança, construtoras, empresas de prestação de serviços, condomínios, agricultura e outros.
                     
                 </p>
                 <p>    
@@ -88,6 +91,9 @@
                 <p class="text-justify">
                     Esperamos com essa medida estar colaborando, e nos colocamos a sua inteira disposição para eventuais cotações e esclarecimentos, que se fizerem necessários sobre quaisquer equipamentos: Motorola, Kenwood e Icom.
                 </p>
+            </div>
+            <div class="col-4">
+              <img class="img-fachada" src="imgs/fachada.jpeg" alt="">
             </div>
         </div>
       </div>
