--- a/servicos.html
+++ b/servicos.html
@@ -72,27 +72,37 @@
       <h1 class="text-center">Nossos Serviços</h1>
       </div>
       
-      <div class="container">
-        <div class="row justify-content-center mb-4">
-            <div class="col-8">
-                
-                <h4>Manutenção</h4>
-                <p class="text-justify">
-                A Master Radiocomunicação conta com técnicos especializado na prestação de serviços de manutenção preventiva e corretiva, utilizando peças originais Icom, Kenwood e Motorola, proporcionando durabilidade e confiabilidade nos equipamentos por ela reparados.
-                Técnicos altamente qualificados e treinados por renomadas marcas do segmento. Sendo que todos os serviços realizados possuem garantia assegurada pela Master Radiocomunicação. Além do conserto de radiocomunicadores, prestamos serviços de instalação de sua rede de radiocomunicação, sendo estações fixas, móveis, repetidoras e antenas.
-                </p>
-
-                <h3>Locação de Equipamentos</h3>
-                <p class="text-justify">
-                    A locação de rádios comunicadores feita pela Mater Radiocomunicação: Temos a solução ideal para uma comunicação eficiente e segura de Sistemas de Radiocomunicação através dos serviços de locação de rádios. Com o objetivo de otimizar, ordenar e gerenciar as conversas por meio de rádio comunicadores, essa novidade permite ao gestor planejar e controlar seu trabalho de locação de rádios.
-                    A locação de rádios é o serviço mais indicado para locais e situações onde a comunicação de voz têm que ser instantâneas, seguras e confiáveis. Um exemplo dessa necessidade pode ser visto nas atividades que envolvem processos produtivos industriais, do segmento privado ou da prestação de serviços de utilidade pública em relação à locação de rádios. Os transceptores obtidos por meio da locação de rádios permitem realizar contato imediato com outras pessoas, para pedir ajuda ou socorro, e, proporciona um controle sobre as funções desenvolvidas durante os serviços de rádio locação.
-                </p>
-
-                <h3>Assistência especializada</h3> 
-                <p class="text-justify">
-                    Para prestação de serviço de assistência técnica, os equipamentos são retirados no local de operação independentemente de os mesmos contemplarem ou não o período de garantia.
-                </p>
-            </div>
+      <div class="container py-5">
+        <div class="row justify-content-center">
+          <div class="col-md-4 servicos-col-esq mt-4">
+            <img class="img-serv" src="imgs/assis_tecnica.jpg" alt="">
+          </div>
+          <div class="col-md-8 servicos-col-dir mb-5">
+            <h3>Manutenção</h3>
+            <p class="text-justify">
+            A Master Radiocomunicação conta com técnicos especializado na prestação de serviços de manutenção preventiva e corretiva, utilizando peças originais Icom, Kenwood e Motorola, proporcionando durabilidade e confiabilidade nos equipamentos por ela reparados.
+            Técnicos altamente qualificados e treinados por renomadas marcas do segmento. Sendo que todos os serviços realizados possuem garantia assegurada pela Master Radiocomunicação. Além do conserto de radiocomunicadores, prestamos serviços de instalação de sua rede de radiocomunicação, sendo estações fixas, móveis, repetidoras e antenas.
+            </p>
+          </div>
+          <div class="col-md-4 servicos-col-esq mt-4">
+            <img class="img-serv" src="imgs/locacao.jpg" alt="">
+          </div>
+          <div class="col-md-8 servicos-col-dir mb-5">
+            <h3>Locação de Equipamentos</h3>
+            <p class="text-justify">
+                A locação de rádios comunicadores feita pela Mater Radiocomunicação: Temos a solução ideal para uma comunicação eficiente e segura de Sistemas de Radiocomunicação através dos serviços de locação de rádios. Com o objetivo de otimizar, ordenar e gerenciar as conversas por meio de rádio comunicadores, essa novidade permite ao gestor planejar e controlar seu trabalho de locação de rádios.
+                A locação de rádios é o serviço mais indicado para locais e situações onde a comunicação de voz têm que ser instantâneas, seguras e confiáveis. Um exemplo dessa necessidade pode ser visto nas atividades que envolvem processos produtivos industriais, do segmento privado ou da prestação de serviços de utilidade pública em relação à locação de rádios. Os transceptores obtidos por meio da locação de rádios permitem realizar contato imediato com outras pessoas, para pedir ajuda ou socorro, e, proporciona um controle sobre as funções desenvolvidas durante os serviços de rádio locação.
+            </p>
+          </div>
+          <div class="col-md-4 servicos-col-esq mt-4">
+            <img class="img-serv" src="imgs/qualidade.jpg" alt="">
+          </div>
+          <div class="col-md-8 servicos-col-dir mb-5">
+            <h3>Assistência especializada</h3> 
+            <p class="text-justify">
+                Para prestação de serviço de assistência técnica, os equipamentos são retirados no local de operação independentemente de os mesmos contemplarem ou não o período de garantia.
+            </p>
+          </div>
         </div>
       </div>
 
