--- a/pgs/dep450.html
+++ b/pgs/dep450.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <link rel="shortcut icon" href="./imgs/logo_master/logo_icon.png" />
+    <link rel="shortcut icon" href="../imgs/logo_master/logo_icon.png" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
 
     <title>Master Radiocomunicação</title>
   </head>
@@ -31,7 +31,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light sticky-top bg-light">
         <div class="container">
-        <a class="navbar-brand" href="#"><img src="./imgs/logo_master/master_logo_preto.png" style="width: 80px; margin: 0; padding: 0;"/></a>
+        <a class="navbar-brand" href="#"><img src="../imgs/logo_master/master_logo_preto.png" style="width: 80px; margin: 0; padding: 0;"/></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,11 +41,11 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">PÁGINA INICIAL</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="empresa.html">A EMPRESA</a>
-            </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">PRODUTOS <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">A EMPRESA <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="produtos.html">PRODUTOS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="servicos.html">SERVIÇOS</a>
@@ -69,44 +69,27 @@
       </nav>
 
       <div class="py-5 titulo">
-      <h1 class="text-center">Nossa linha de produtos</h1>
+      <h1 class="text-center">Rádio Portátil Digital DEP450</h1>
       </div>
       
       <div class="container">
+        <div class="row justify-content-center mb-4">
+          <div class="col-md-4">
+            <img class="img-fachada" src="../imgs/radios/DEP450-600x600.png" alt="">
+          </div>  
+          <div class="col-md-6 mt-4">
+                <p class="text-justify">
+                  Simples e acessível, o rádio portátil bidirecional DEP 450 é um rádio Digital para os usuários que o utilizam diariamente e desejam permanecer conectados. Totalmente compatível com a família de rádios MOTOTRBO™, o DEP 450 tem uma qualidade de áudio superior, uma cobertura superior, uma bateria de longa duração, opera em sistemas IP Site Connect e tem 32 canais.
 
+                </p>
 
-        <div class="produtos">
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/ep450.png" alt="">
-            <h4>Motorola EP450</h4>
-          </div>
-          <div class="produto_item" onclick="window.location.href = 'pgs/dep450.html'">
-            <img src="imgs/imagens_motorola/dep450.jpg" alt="">
-            <h4>Motorola DEP450</h4>
-          </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/pro5150.png" alt="">
-            <h4>Motorola PRO5150</h4>
-          </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp5050.jpg" alt="">
-            <h4>Motorola DGP5050</h4>
-          </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8050e.jpg" alt="">
-            <h4>Motorola DGP8050E</h4>
-          </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8550e.jpg" alt="">
-            <h4>Motorola DGP8550E</h4>
-          </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8050ex.jpg" alt="">
-            <h4>Motorola DGP8050EX</h4>
-          </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8550ex.jpg" alt="">
-            <h4>Motorola DGP8550EX</h4>
+                <p class="text-justify">
+                  O DEP 450 Digital proporciona áudio melhorado, 40% a mais de vida útil da bateria, e eficiência espectral de 2:1, oferecendo assim uma melhor colaboração entre seus grupos de trabalho já estabelecidos com eficiência e interoperabilidade.
+
+                </p>
+                <p class="text-justify">
+                  Sem importar às suas necessidades, o DEP 450 proporciona uma solução de comunicação simples, confiável e rentável para ajudar as equipes de trabalho a se conectar, coordenar e colaborar para fazer bem seu trabalho. Melhore a eficiência de suas operações com comunicações de voz simples de usar que são perfeitas para seu negócio.  
+                </p>
           </div>
 
         </div>
@@ -123,13 +106,13 @@
                 <div class="col-12">
                     <h3 class=" mb-4">As melhores marcas do mercado</h3>
                     <div class="marcas">
-                        <img class="img-footer" src="./imgs/marcas/lg-motorola.png">
-                        <img class="img-footer" src="./imgs/marcas/lg-abell.png">
-                        <img class="img-footer" src="./imgs/marcas/lg-hytera.png">
-                        <img class="img-footer" src="./imgs/marcas/lg-kenwood.png">
-                        <img class="img-footer" src="./imgs/marcas/lg-nextcom.png">
-                        <img class="img-footer" src="./imgs/marcas/lg-sepura.png">
-                        <img class="img-footer" src="./imgs/marcas/lg-vertex.png">
+                        <img class="img-footer" src="../imgs/marcas/lg-motorola.png">
+                        <img class="img-footer" src="../imgs/marcas/lg-abell.png">
+                        <img class="img-footer" src="../imgs/marcas/lg-hytera.png">
+                        <img class="img-footer" src="../imgs/marcas/lg-kenwood.png">
+                        <img class="img-footer" src="../imgs/marcas/lg-nextcom.png">
+                        <img class="img-footer" src="../imgs/marcas/lg-sepura.png">
+                        <img class="img-footer" src="../imgs/marcas/lg-vertex.png">
                     </div> 
                 </div>
             </div>
