--- a/pgs/dep450.html
+++ b/pgs/dep450.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="../imgs/logo_master/logo_icon.png" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="../font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="../css/estilo.css">
 
     <title>Master Radiocomunicação</title>
@@ -39,16 +39,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">PÁGINA INICIAL</a>
+              <a class="nav-link" href="../index.html">PÁGINA INICIAL</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">A EMPRESA <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="../empresa.html">A EMPRESA <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="produtos.html">PRODUTOS</a>
+              <a class="nav-link" href="../produtos.html">PRODUTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="servicos.html">SERVIÇOS</a>
+              <a class="nav-link" href="../servicos.html">SERVIÇOS</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
@@ -91,8 +91,13 @@
                   Sem importar às suas necessidades, o DEP 450 proporciona uma solução de comunicação simples, confiável e rentável para ajudar as equipes de trabalho a se conectar, coordenar e colaborar para fazer bem seu trabalho. Melhore a eficiência de suas operações com comunicações de voz simples de usar que são perfeitas para seu negócio.  
                 </p>
           </div>
-
         </div>
+        <div class="row justify-content-center my-5">
+          <div class="btn-voltar" onclick="window.history.back()">
+            <h4><i class="fa fa-arrow-left"></i> Voltar</h4>
+          </div>
+        </div>
+
       </div>
 
 
