--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -67,6 +67,11 @@
         </div>
         </div>
       </nav>
+
+          
+    <div class="zap" style="width: 100px; height: 100px; position: fixed; right: 20px; bottom: 20px; z-index: 1000;">
+      <img src="imgs/zap.png" alt="" width="90px" onclick="location.href='https://api.whatsapp.com/send?phone=5513997191911';" style="cursor: pointer;">
+    </div>
 
       <!--Carrosel-->
       <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
