--- a/pgs/dgp5550.html
+++ b/pgs/dgp5550.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="../css/estilo.css">
 
-    <title>Rádio DEP450 - Master</title>
+    <title>Rádio DGP5550 - Master</title>
   </head>
   <body>
 
@@ -41,7 +41,7 @@
             <li class="nav-item">
               <a class="nav-link" href="../index.html">PÁGINA INICIAL</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item ">
               <a class="nav-link" href="../empresa.html">A EMPRESA </a>
             </li>
             <li class="nav-item">
@@ -69,27 +69,23 @@
       </nav>
 
       <div class="py-5 titulo">
-      <h1 class="text-center">Rádio Portátil Digital DEP450</h1>
+      <h1 class="text-center">Rádio Portátil Digital DGP5550</h1>
       </div>
       
       <div class="container">
         <div class="row justify-content-center mb-4" style="border-bottom: 1px solid #9696ff;">
           <div class="col-md-4">
-            <img class="img-fachada" src="../imgs/radios/DEP450-600x600.png" alt="">
+            <img class="img-fachada" src="../imgs/radios/DGP5550.jpg" alt="">
           </div>  
           <div class="col-md-6 mt-4">
                 <p class="text-justify">
-                  Simples e acessível, o rádio portátil bidirecional DEP 450 é um rádio Digital para os usuários que o utilizam diariamente e desejam permanecer conectados. Totalmente compatível com a família de rádios MOTOTRBO™, o DEP 450 tem uma qualidade de áudio superior, uma cobertura superior, uma bateria de longa duração, opera em sistemas IP Site Connect e tem 32 canais.
-
+                  Do operário fabril que faz os componentes à equipe da estrada fazendo reparos, o MOTOTRBO pode transformar sua empresa e tornar as interações dos funcionários mais inteligentes e seguras. Nossos melhores recursos de áudio e dados incomparáveis ​​da categoria capacitam pessoas como nunca antes.
+                  <br/><br/>
+                  A série DGP 5000 oferece comunicações de dados e voz incomparáveis ​​com dados e áudio Bluetooth integrados, GPS integrado e o melhor áudio da categoria, que inclui áudio inteligente e recurso de anúncio de voz personalizável.
+                  <br/><br/>
+                  Disponível em 800/900 MHz, bem como nas faixas de frequência UHF e VHF, a série DGP 5000 oferece suporte para até 32 canais, três botões programáveis, botão de emergência, classificação IP57 (à prova de poeira e submersível em água) e opção intrinsecamente segura de FM.
                 </p>
 
-                <p class="text-justify">
-                  O DEP 450 Digital proporciona áudio melhorado, 40% a mais de vida útil da bateria, e eficiência espectral de 2:1, oferecendo assim uma melhor colaboração entre seus grupos de trabalho já estabelecidos com eficiência e interoperabilidade.
-
-                </p>
-                <p class="text-justify">
-                  Sem importar às suas necessidades, o DEP 450 proporciona uma solução de comunicação simples, confiável e rentável para ajudar as equipes de trabalho a se conectar, coordenar e colaborar para fazer bem seu trabalho. Melhore a eficiência de suas operações com comunicações de voz simples de usar que são perfeitas para seu negócio.  
-                </p>
           </div>
         </div>
         <div class="row justify-content-center my-5">
