--- a/produtos.html
+++ b/produtos.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -67,7 +67,11 @@
         </div>
         </div>
       </nav>
-
+    
+      <div class="zap" style="width: 100px; height: 100px; position: fixed; right: 20px; bottom: 20px; z-index: 1000;">
+        <img src="imgs/zap.png" alt="" width="90px" onclick="location.href='https://api.whatsapp.com/send?phone=5513997191911';" style="cursor: pointer;">
+      </div>
+      
       <div class="py-5 titulo">
       <h1 class="text-center">Nossa linha de produtos</h1>
       </div>
@@ -76,36 +80,44 @@
 
 
         <div class="produtos">
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/ep450.png" alt="">
+          <div class="produto_item" onclick="window.location.href = 'pgs/ep450.html'">
+            <img src="imgs/radios/ep450.png" alt="">
             <h4>Motorola EP450</h4>
           </div>
           <div class="produto_item" onclick="window.location.href = 'pgs/dep450.html'">
-            <img src="imgs/imagens_motorola/dep450.jpg" alt="">
+            <img src="imgs/radios/dep450.jpg" alt="">
             <h4>Motorola DEP450</h4>
           </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/pro5150.png" alt="">
+          <div class="produto_item" onclick="window.location.href = 'pgs/pro5150.html'">
+            <img src="imgs/radios/pro5150.png" alt="">
             <h4>Motorola PRO5150</h4>
           </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp5050.jpg" alt="">
+          <div class="produto_item" onclick="window.location.href = 'pgs/dgp4150.html'">
+            <img src="imgs/radios/DGP4150.webp" alt="">
+            <h4>Motorola DGP4150</h4>
+          </div>
+          <div class="produto_item" onclick="window.location.href = 'pgs/dgp5050.html'">
+            <img src="imgs/radios/dgp5050.jpg" alt="">
             <h4>Motorola DGP5050</h4>
           </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8050e.jpg" alt="">
+          <div class="produto_item" onclick="window.location.href = 'pgs/dgp5550.html'">
+            <img src="imgs/radios/DGP5550.jpg" alt="">
+            <h4>Motorola DGP5550</h4>
+          </div>
+          <div class="produto_item" onclick="window.location.href = 'pgs/dgp8050e.html'">
+            <img src="imgs/radios/dgp8050e.jpg" alt="">
             <h4>Motorola DGP8050E</h4>
           </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8550e.jpg" alt="">
+          <div class="produto_item" onclick="window.location.href = 'pgs/dgp8550e.html'">
+            <img src="imgs/radios/dgp8550e.jpg" alt="">
             <h4>Motorola DGP8550E</h4>
           </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8050ex.jpg" alt="">
+          <div class="produto_item" onclick="window.location.href = 'pgs/dgp8050ex.html'">
+            <img src="imgs/radios/dgp8050ex.jpg" alt="">
             <h4>Motorola DGP8050EX</h4>
           </div>
-          <div class="produto_item">
-            <img src="imgs/imagens_motorola/dgp8550ex.jpg" alt="">
+          <div class="produto_item" onclick="window.location.href = 'pgs/dgp8550ex.html'">
+            <img src="imgs/radios/dgp8550ex.jpg" alt="">
             <h4>Motorola DGP8550EX</h4>
           </div>
 
