--- a/pgs/pro5150.html
+++ b/pgs/pro5150.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="../css/estilo.css">
 
-    <title>Rádio DEP450 - Master</title>
+    <title>Rádio PRO5150 - Master</title>
   </head>
   <body>
 
@@ -68,28 +68,26 @@
         </div>
       </nav>
 
+    
+    <div class="zap" style="width: 100px; height: 100px; position: fixed; right: 20px; bottom: 20px;">
+        <img src="../imgs/zap.png" alt="" width="90px" onclick="location.href='https://api.whatsapp.com/send?phone=5513997191911';" style="cursor: pointer;">
+    </div>
+
       <div class="py-5 titulo">
-      <h1 class="text-center">Rádio Portátil Digital DEP450</h1>
+      <h1 class="text-center">Rádio Portátil PRO5150</h1>
       </div>
       
       <div class="container">
         <div class="row justify-content-center mb-4" style="border-bottom: 1px solid #9696ff;">
           <div class="col-md-4">
-            <img class="img-fachada" src="../imgs/radios/DEP450-600x600.png" alt="">
+            <img class="img-fachada" src="../imgs/radios/pro5150.png" alt="">
           </div>  
           <div class="col-md-6 mt-4">
                 <p class="text-justify">
-                  Simples e acessível, o rádio portátil bidirecional DEP 450 é um rádio Digital para os usuários que o utilizam diariamente e desejam permanecer conectados. Totalmente compatível com a família de rádios MOTOTRBO™, o DEP 450 tem uma qualidade de áudio superior, uma cobertura superior, uma bateria de longa duração, opera em sistemas IP Site Connect e tem 32 canais.
 
+                  O rádio portátil PRO5150 é a solução econômica para profissionais que necessitam de um rádio resistente e confiável para manter-se em comunicação. Este prático rádio pode ajudá-lo facilmente a aumentar sua produtividade mantendo os usuários em comunicação, ao mesmo tempo dinamizando o uso do rádio — permitindo a concentração no trabalho que está sendo realizado. E com a tecnologia de compresão de voz X-Pand™, a qualidade do áudio é clara e nítida —em qualquer ambiente. Com o rádio portátil PRO5150, a comunicação não poderia ser mais fácil
                 </p>
 
-                <p class="text-justify">
-                  O DEP 450 Digital proporciona áudio melhorado, 40% a mais de vida útil da bateria, e eficiência espectral de 2:1, oferecendo assim uma melhor colaboração entre seus grupos de trabalho já estabelecidos com eficiência e interoperabilidade.
-
-                </p>
-                <p class="text-justify">
-                  Sem importar às suas necessidades, o DEP 450 proporciona uma solução de comunicação simples, confiável e rentável para ajudar as equipes de trabalho a se conectar, coordenar e colaborar para fazer bem seu trabalho. Melhore a eficiência de suas operações com comunicações de voz simples de usar que são perfeitas para seu negócio.  
-                </p>
           </div>
         </div>
         <div class="row justify-content-center my-5">
