--- a/pgs/dgp8050e.html
+++ b/pgs/dgp8050e.html
@@ -69,9 +69,9 @@
       </nav>
 
     
-    <div class="zap" style="width: 100px; height: 100px; position: fixed; right: 20px; bottom: 20px;">
-        <img src="../imgs/zap.png" alt="" width="90px" onclick="location.href='https://api.whatsapp.com/send?phone=5513997191911';" style="cursor: pointer;">
-    </div>
+      <div class="zap">
+        <img src="../imgs/zap.png" alt="Fale conosco">
+      </div>  
 
       <div class="py-5 titulo">
       <h1 class="text-center">Rádio Portátil Digital DGP8050E</h1>
@@ -154,5 +154,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="../js/funcoes.js"></script>
   </body>
 </html>
