--- a/empresa.html
+++ b/empresa.html
@@ -68,17 +68,17 @@
         </div>
       </nav>
     
-      <div class="zap" style="width: 100px; height: 100px; position: fixed; right: 20px; bottom: 20px; z-index: 1000;">
-        <img src="imgs/zap.png" alt="" width="90px" onclick="location.href='https://api.whatsapp.com/send?phone=5513997191911';" style="cursor: pointer;">
-      </div>
+      <div class="zap">
+        <img src="imgs/zap.png" alt="Fale conosco">
+      </div>  
 
       <div class="py-5 titulo">
       <h1 class="text-center">A Empresa</h1>
       </div>
       
       <div class="container">
-        <div class="row justify-content-center mb-4">
-            <div class="col-6 mt-4">
+        <div class="row justify-content-center mb-4 empresa_cont">
+            <div class="col-sm-6 mt-4 empresa_desc">
                 <p class="text-justify">
                     Com 20 anos no mercado, a Master Radiocomunicação vem a vossa presença apresentar-se como empresa altamente especializada, oferecendo melhor relação de custo entre todos os equipamentos das renomadas marcas Icom, Motorola e Kenwood.
                 </p>
@@ -96,7 +96,7 @@
                     Esperamos com essa medida estar colaborando, e nos colocamos a sua inteira disposição para eventuais cotações e esclarecimentos, que se fizerem necessários sobre quaisquer equipamentos: Motorola, Kenwood e Icom.
                 </p>
             </div>
-            <div class="col-4">
+            <div class="col-sm-4 empresa_foto">
               <img class="img-fachada" src="imgs/fachada.jpeg" alt="">
             </div>
         </div>
@@ -144,5 +144,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="./js/funcoes.js"></script>
   </body>
 </html>
