--- a/pgs/dep450.html
+++ b/pgs/dep450.html
@@ -68,6 +68,10 @@
         </div>
       </nav>
 
+      <div class="zap">
+        <img src="../imgs/zap.png" alt="Fale conosco">
+      </div>  
+
       <div class="py-5 titulo">
       <h1 class="text-center">Rádio Portátil Digital DEP450</h1>
       </div>
@@ -142,5 +146,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="../js/funcoes.js"></script>
   </body>
 </html>
