--- a/produtos.html
+++ b/produtos.html
@@ -68,9 +68,9 @@
         </div>
       </nav>
     
-      <div class="zap" style="width: 100px; height: 100px; position: fixed; right: 20px; bottom: 20px; z-index: 1000;">
-        <img src="imgs/zap.png" alt="" width="90px" onclick="location.href='https://api.whatsapp.com/send?phone=5513997191911';" style="cursor: pointer;">
-      </div>
+      <div class="zap">
+        <img src="imgs/zap.png" alt="Fale conosco">
+      </div>  
       
       <div class="py-5 titulo">
       <h1 class="text-center">Nossa linha de produtos</h1>
@@ -166,5 +166,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="./js/funcoes.js"></script>
   </body>
 </html>
