--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   NOSSAS REDES
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownSocial">
-                  <a class="dropdown-item" href="https://www.facebook.com/SueroTerraplenagem">Facebook</a>
+                  <a class="dropdown-item" href="#">Facebook</a>
                   <a class="dropdown-item" href="#">Twitter</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="#">Instagram</a>
